--- a/src/pages/home/heroBanner/style.scss
+++ b/src/pages/home/heroBanner/style.scss
@@ -72,7 +72,7 @@
             align-items: center;
             width: 100%;
             input {
-                width: calc(100% - 100px);
+                width: 100%;
                 height: 50px;
                 background-color: white;
                 outline: 0;
