--- a/src/pages/home/heroBanner/style.scss
+++ b/src/pages/home/heroBanner/style.scss
@@ -77,7 +77,7 @@
                 background-color: white;
                 outline: 0;
                 border: 0;
-                border-radius: 30px 0 0 30px;
+                border-radius:30px;
                 padding: 0 15px;
                 font-size: 14px;
                 @include md {
