--- a/src/pages/home/heroBanner/style.scss
+++ b/src/pages/home/heroBanner/style.scss
@@ -70,6 +70,7 @@
         .searchInput {
             display: flex;
             align-items: center;
+              justify-content: center;
             width: 100%;
             input {
                 width: 100%;
